Ohoh, found old spring integration test code with bad jdbc url.